--- a/app/globals.css
+++ b/app/globals.css
@@ -68,11 +68,25 @@
   .light-only {
     display: none;
   }
+
+  .binary {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='30'%3E%3Ctext x='0' y='20' font-size='20' letter-spacing='5' font-family='monospace' fill='%23121212'%3E1101010010110101001011%3C/text%3E%3C/svg%3E");
+    background-repeat: repeat;
+    background-size: 250px;
+    box-shadow: -1px -1px 30px 0px rgba(0, 0, 0, 0.50) inset, 1px 1px 30px 0px rgba(0, 0, 0, 0.50) inset;
+  }
 }
 
 @media (prefers-color-scheme: light) {
   .dark-only {
     display: none;
+  }
+
+  .binary {
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='30'%3E%3Ctext x='0' y='20' font-size='20' letter-spacing='5' font-family='monospace' fill='%23E3E3E3'%3E1101010010110101001011%3C/text%3E%3C/svg%3E");
+    background-repeat: repeat;
+    background-size: 250px;
+    box-shadow: -1px -1px 30px 0px #FFF inset, 1px 1px 30px 0px #FFF inset;
   }
 }
 
@@ -161,13 +175,6 @@ body {
 
   .prose {
     letter-spacing: -0.8px;
-  }
-
-  .binary {
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='400' height='30'%3E%3Ctext x='0' y='20' font-size='20' letter-spacing='5' font-family='monospace' fill='%23E3E3E3'%3E1101010010110101001011%3C/text%3E%3C/svg%3E");
-    background-repeat: repeat;
-    background-size: 250px;
-    box-shadow: -1px -1px 30px 0px #FFF inset, 1px 1px 30px 0px #FFF inset;
   }
 }
 
