--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
 
-  --spacing-header: 64px;
+  --spacing-header: 120px;
 
   /* --color-base: var(--base); */
   --color-background: var(--background);
@@ -20,6 +20,12 @@
   --text-xxs: 11px;
 
   --tracking-prose: -0.8px;
+}
+
+@media screen and (min-width: 768px) {
+  @theme inline {
+    --spacing-header: 64px;
+  }
 }
 
 :root {
